docs: Update project documentation for Question Engine integration
- Add Dec 5 progress summary (Question Engine, AST folders, session persistence)
- Document nine question classes in architecture section
- Add IES AST Mode documentation references
- Update .gitignore for ChatGPT research exports (.research/, IES Chat/)
- Add PROJECT-STATE-2025-12-05.md snapshot

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ claude-prompts/
 AGENTS.md
 claudedoc.txt
 resources+.md
+
+# ChatGPT research exports (reference materials)
+IES Chat/
+*.chatgpt.md
+.research/
